# src/index.ts
@@ -2,17 +2,17 @@ import env from "@env";
 import { serve } from "@hono/node-server";
 import { Hono } from "hono";
 import { compress } from "hono/compress";
-import { addressRoutes } from "./modules/address/address.routes";
+import { addressesRoutes } from "./modules/addresses/addresses.routes";
 import { authRoutes } from "./modules/auth/auth.routes";
-import { businessRoutes } from "./modules/business/business.route";
+import { businessesRoutes } from "./modules/businesses/businesses.route";
 
 const app = new Hono();
 
 app.use(compress());
 
 app.route("/auth", authRoutes);
-app.route("/address", addressRoutes);
-app.route("/business", businessRoutes)
+app.route("/addresses", addressesRoutes);
+app.route("/businesses", businessesRoutes);
 
 if (env.NODE_ENV === "dev") {
     serve(
