# src/modules/businesses/businesses.route.ts
@@ -3,45 +3,43 @@ import { generateOpenApiResponseFromSchema } from "@/utils/open-api";
 import { HTTP_STATUS } from "@/utils/status-codes";
 import { Hono } from "hono";
 import { describeRoute, validator } from "hono-openapi";
-import { businessRouteSchema } from "./business.schema";
-import { businessService } from "./business.service";
+import { businessesRouteSchema } from "./businesses.schema";
+import { businessesService } from "./businesses.service";
+import { businessMiddleware } from "./businesses.utils";
 import { listingsRoutes } from "./modules/listings/listings.route";
-import { HTTPException } from "hono/http-exception";
-import z from "zod";
-import { businessMiddleware } from "./business.utils";
 
-export const businessRoutes = new Hono().use(
+export const businessesRoutes = new Hono().use(
     protectedMiddleware({ type: "user" }),
 );
 
-businessRoutes.get(
+businessesRoutes.get(
     "/",
     describeRoute({
         description: "Find All Businesses",
         responses: generateOpenApiResponseFromSchema(
-            businessRouteSchema.findAll.response,
+            businessesRouteSchema.findAll.response,
         ),
     }),
     async (c) => {
         const userId = c.get("user").id;
-        const businesses = await businessService.findAll({ ownerId: userId });
+        const businesses = await businessesService.findAll({ ownerId: userId });
         return c.json(businesses, HTTP_STATUS["OK"]);
     },
 );
 
-businessRoutes.post(
+businessesRoutes.post(
     "/",
     describeRoute({
         description: "Create a Business",
         responses: generateOpenApiResponseFromSchema(
-            businessRouteSchema.create.response,
+            businessesRouteSchema.create.response,
         ),
     }),
-    validator("json", businessRouteSchema.create.request.json),
+    validator("json", businessesRouteSchema.create.request.json),
     async (c) => {
         const json = c.req.valid("json");
         const userId = c.get("user").id;
-        const business = await businessService.create({
+        const business = await businessesService.create({
             ...json,
             ownerId: userId,
         });
@@ -50,19 +48,19 @@ businessRoutes.post(
     },
 );
 
-businessRoutes.get(
+businessesRoutes.get(
     "/:businessId",
     describeRoute({
         description: "Find A Business",
         responses: generateOpenApiResponseFromSchema(
-            businessRouteSchema.find.response,
+            businessesRouteSchema.find.response,
         ),
     }),
-    validator("param", businessRouteSchema.find.request.param),
+    validator("param", businessesRouteSchema.find.request.param),
     async (c) => {
         const { businessId } = c.req.valid("param");
         const userId = c.get("user").id;
-        const business = await businessService.find({
+        const business = await businessesService.find({
             id: businessId,
             ownerId: userId,
         });
@@ -71,21 +69,21 @@ businessRoutes.get(
     },
 );
 
-businessRoutes.patch(
+businessesRoutes.patch(
     "/:businessId",
     describeRoute({
         description: "Update A Business",
         responses: generateOpenApiResponseFromSchema(
-            businessRouteSchema.update.response,
+            businessesRouteSchema.update.response,
         ),
     }),
-    validator("param", businessRouteSchema.update.request.param),
-    validator("json", businessRouteSchema.update.request.json),
+    validator("param", businessesRouteSchema.update.request.param),
+    validator("json", businessesRouteSchema.update.request.json),
     async (c) => {
         const { businessId } = c.req.valid("param");
         const json = c.req.valid("json");
         const userId = c.get("user").id;
-        const business = await businessService.update({
+        const business = await businessesService.update({
             id: businessId,
             ownerId: userId,
             ...json,
@@ -95,19 +93,19 @@ businessRoutes.patch(
     },
 );
 
-businessRoutes.delete(
+businessesRoutes.delete(
     "/:businessId",
     describeRoute({
         description: "Delete A Business",
         responses: generateOpenApiResponseFromSchema(
-            businessRouteSchema.delete.response,
+            businessesRouteSchema.delete.response,
         ),
     }),
-    validator("param", businessRouteSchema.delete.request.param),
+    validator("param", businessesRouteSchema.delete.request.param),
     async (c) => {
         const { businessId } = c.req.valid("param");
         const userId = c.get("user").id;
-        await businessService.delete({
+        await businessesService.delete({
             id: businessId,
             ownerId: userId,
         });
@@ -121,6 +119,6 @@ businessRoutes.delete(
     },
 );
 
-businessRoutes.use("/:businessId/*", businessMiddleware());
+businessesRoutes.use("/:businessId/*", businessMiddleware());
 
-businessRoutes.route("/:businessId/listings", listingsRoutes);
+businessesRoutes.route("/:businessId/listings", listingsRoutes);
